objects/DMAPP__DM_DVLS_Question_Response__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing a given user&apos;s response to a particular eLearning question.</description>
    <fields>
        <fullName>DMAPP__Component_User__c</fullName>
        <label>Component User</label>
        <referenceTo>DMAPP__DM_DVLS_Component_User__c</referenceTo>
        <relationshipLabel>Test Question Responses</relationshipLabel>
        <relationshipName>Test_Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__DVLS_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealmaker Question</label>
        <referenceTo>DMAPP__DM_DVLS_Question__c</referenceTo>
        <relationshipLabel>Test Question Responses</relationshipLabel>
        <relationshipName>DVLS_Question_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Is_Correct__c</fullName>
        <formula>IF(DMAPP__Correct__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Correct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Test Question Response</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>eLearning Test Question Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>